Bug 396634 - KDevelop crash while editing QML file with custom types
Summary: KDevelop crash while editing QML file with custom types
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Language Support: QML/JavaScript (other bugs)
Version First Reported In: 5.2.3
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2018-07-18 15:07 UTC by Robert Voinea
Modified: 2018-10-24 21:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Voinea 2018-07-18 15:07:53 UTC
Application: kdevelop (5.2.3)

Qt Version: 5.11.1
Frameworks Version: 5.48.0
Operating System: Linux 4.17.6-1-ARCH x86_64
Distribution: "Arch Linux"

-- Information about the crash:
- What I was doing when the application crashed:
I was editing a QML file with custom types that are loaded from a QML plugin.
The Plugin that includes the custom type is part of the project.

- Unusual behavior I noticed:
Whenever I moved the cursor over an instance of the custom type, KDevelop would crash. 
Every time.

- Custom settings of the application:
One CMake project with several submodules. 
git as version control.

The crash can be reproduced every time.

-- Backtrace:
Application: KDevelop (kdevelop), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fe3e2939e00 (LWP 3070))]

Thread 16 (Thread 0x7fe34e3d9700 (LWP 3201)):
#0  0x00007fe3d5b742f4 in g_mutex_unlock () at /usr/lib/libglib-2.0.so.0
#1  0x00007fe3d5b2d3ce in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007fe3d5b2d63e in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007fe3df8b9054 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007fe3df86494c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007fe3df6ada99 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007fe3dd1d03f6 in  () at /usr/lib/libKDevPlatformLanguage.so.52
#7  0x00007fe3df6b7b45 in  () at /usr/lib/libQt5Core.so.5
#8  0x00007fe3d8709075 in start_thread () at /usr/lib/libpthread.so.0
#9  0x00007fe3defa753f in clone () at /usr/lib/libc.so.6

Thread 15 (Thread 0x7fe36a7fc700 (LWP 3197)):
#0  0x00007fe3d870effc in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007fe3df6b82fc in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007fe3d411b139 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007fe3d411f009 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007fe3d411a1fd in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007fe3d411d059 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007fe3df6b7b45 in  () at /usr/lib/libQt5Core.so.5
#7  0x00007fe3d8709075 in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007fe3defa753f in clone () at /usr/lib/libc.so.6

Thread 14 (Thread 0x7fe36affd700 (LWP 3196)):
#0  0x00007fe3d870effc in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007fe3df6b82fc in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007fe3d411b139 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007fe3d411f009 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007fe3d411a1fd in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007fe3d411d059 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007fe3df6b7b45 in  () at /usr/lib/libQt5Core.so.5
#7  0x00007fe3d8709075 in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007fe3defa753f in clone () at /usr/lib/libc.so.6

Thread 13 (Thread 0x7fe36b7fe700 (LWP 3195)):
#0  0x00007fe3d870effc in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007fe3df6b82fc in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007fe3d411b139 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007fe3d411f009 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007fe3d411a1fd in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007fe3d411d059 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007fe3df6b7b45 in  () at /usr/lib/libQt5Core.so.5
#7  0x00007fe3d8709075 in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007fe3defa753f in clone () at /usr/lib/libc.so.6

Thread 12 (Thread 0x7fe36bfff700 (LWP 3194)):
#0  0x00007fe3d870effc in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007fe3df6b82fc in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007fe3d411b139 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007fe3d411f009 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007fe3d411a1fd in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007fe3d411d059 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007fe3df6b7b45 in  () at /usr/lib/libQt5Core.so.5
#7  0x00007fe3d8709075 in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007fe3defa753f in clone () at /usr/lib/libc.so.6

Thread 11 (Thread 0x7fe37c807700 (LWP 3193)):
#0  0x00007fe3d870effc in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007fe3df6b82fc in QWaitCondition::wait(QMutex*, unsigned long) () at /usr/lib/libQt5Core.so.5
#2  0x00007fe3d411b139 in ThreadWeaver::Weaver::takeFirstAvailableJobOrSuspendOrWait(ThreadWeaver::Thread*, bool, bool, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#3  0x00007fe3d411f009 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#4  0x00007fe3d411a1fd in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#5  0x00007fe3d411f062 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#6  0x00007fe3d411a1fd in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#7  0x00007fe3d411f062 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#8  0x00007fe3d411a1fd in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#9  0x00007fe3d411f062 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#10 0x00007fe3d411a1fd in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#11 0x00007fe3d411f062 in  () at /usr/lib/libKF5ThreadWeaver.so.5
#12 0x00007fe3d411a1fd in ThreadWeaver::Weaver::applyForWork(ThreadWeaver::Thread*, bool) () at /usr/lib/libKF5ThreadWeaver.so.5
#13 0x00007fe3d411d059 in ThreadWeaver::Thread::run() () at /usr/lib/libKF5ThreadWeaver.so.5
#14 0x00007fe3df6b7b45 in  () at /usr/lib/libQt5Core.so.5
#15 0x00007fe3d8709075 in start_thread () at /usr/lib/libpthread.so.0
#16 0x00007fe3defa753f in clone () at /usr/lib/libc.so.6

Thread 10 (Thread 0x7fe386233700 (LWP 3099)):
#0  0x00007fe3defb48f2 in __libc_disable_asynccancel () at /usr/lib/libc.so.6
#1  0x00007fe3def98949 in read () at /usr/lib/libc.so.6
#2  0x00007fe3d5b72ed1 in  () at /usr/lib/libglib-2.0.so.0
#3  0x00007fe3d5b2cff8 in g_main_context_check () at /usr/lib/libglib-2.0.so.0
#4  0x00007fe3d5b2d4c6 in  () at /usr/lib/libglib-2.0.so.0
#5  0x00007fe3d5b2d63e in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#6  0x00007fe3df8b9054 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#7  0x00007fe3df86494c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#8  0x00007fe3df6ada99 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#9  0x00007fe37d9f0cea in  () at /usr/lib/qt/qml/QtQuick/XmlListModel/libqmlxmllistmodelplugin.so
#10 0x00007fe3df6b7b45 in  () at /usr/lib/libQt5Core.so.5
#11 0x00007fe3d8709075 in start_thread () at /usr/lib/libpthread.so.0
#12 0x00007fe3defa753f in clone () at /usr/lib/libc.so.6

Thread 9 (Thread 0x7fe385a32700 (LWP 3088)):
#0  0x00007fe3df8b76c2 in QTimerInfoList::repairTimersIfNeeded() () at /usr/lib/libQt5Core.so.5
#1  0x00007fe3df8b7755 in QTimerInfoList::timerWait(timespec&) () at /usr/lib/libQt5Core.so.5
#2  0x00007fe3df8b8dbf in  () at /usr/lib/libQt5Core.so.5
#3  0x00007fe3d5b2ca49 in g_main_context_prepare () at /usr/lib/libglib-2.0.so.0
#4  0x00007fe3d5b2d44e in  () at /usr/lib/libglib-2.0.so.0
#5  0x00007fe3d5b2d63e in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#6  0x00007fe3df8b9054 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#7  0x00007fe3df86494c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#8  0x00007fe3df6ada99 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#9  0x00007fe3dd1d03f6 in  () at /usr/lib/libKDevPlatformLanguage.so.52
#10 0x00007fe3df6b7b45 in  () at /usr/lib/libQt5Core.so.5
#11 0x00007fe3d8709075 in start_thread () at /usr/lib/libpthread.so.0
#12 0x00007fe3defa753f in clone () at /usr/lib/libc.so.6

Thread 8 (Thread 0x7fe3872d0700 (LWP 3084)):
#0  0x00007fe3def9cea9 in poll () at /usr/lib/libc.so.6
#1  0x00007fe3d5b2d523 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007fe3d5b2d63e in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007fe3df8b9054 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007fe3df86494c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007fe3df6ada99 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007fe3df6b7b45 in  () at /usr/lib/libQt5Core.so.5
#7  0x00007fe3d8709075 in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007fe3defa753f in clone () at /usr/lib/libc.so.6

Thread 7 (Thread 0x7fe38e0fb700 (LWP 3082)):
#0  0x00007fe3def98934 in read () at /usr/lib/libc.so.6
#1  0x00007fe3d5b72ed1 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007fe3d5b2cff8 in g_main_context_check () at /usr/lib/libglib-2.0.so.0
#3  0x00007fe3d5b2d4c6 in  () at /usr/lib/libglib-2.0.so.0
#4  0x00007fe3d5b2d63e in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#5  0x00007fe3df8b9054 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#6  0x00007fe3df86494c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#7  0x00007fe3df6ada99 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#8  0x00007fe3d81619c9 in  () at /usr/lib/libQt5Qml.so.5
#9  0x00007fe3df6b7b45 in  () at /usr/lib/libQt5Core.so.5
#10 0x00007fe3d8709075 in start_thread () at /usr/lib/libpthread.so.0
#11 0x00007fe3defa753f in clone () at /usr/lib/libc.so.6

Thread 6 (Thread 0x7fe394e84700 (LWP 3080)):
#0  0x00007fe3d5b2cd28 in g_main_context_check () at /usr/lib/libglib-2.0.so.0
#1  0x00007fe3d5b2d4c6 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007fe3d5b2d63e in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007fe3df8b9054 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007fe3df86494c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007fe3df6ada99 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007fe3df6b7b45 in  () at /usr/lib/libQt5Core.so.5
#7  0x00007fe3d8709075 in start_thread () at /usr/lib/libpthread.so.0
#8  0x00007fe3defa753f in clone () at /usr/lib/libc.so.6

Thread 5 (Thread 0x7fe396549700 (LWP 3079)):
#0  0x00007fe3d870effc in pthread_cond_wait@@GLIBC_2.3.2 () at /usr/lib/libpthread.so.0
#1  0x00007fe3df31fd6d in __gthread_cond_wait (__mutex=<optimized out>, __cond=<optimized out>) at /build/gcc/src/gcc-build/x86_64-pc-linux-gnu/libstdc++-v3/include/x86_64-pc-linux-gnu/bits/gthr-default.h:864
#2  0x00007fe3df31fd6d in std::condition_variable::wait(std::unique_lock<std::mutex>&) (this=<optimized out>, __lock=...) at /build/gcc/src/gcc/libstdc++-v3/src/c++11/condition_variable.cc:53
#3  0x00007fe39b502ad4 in  () at /usr/lib/libQt5WebKit.so.5
#4  0x00007fe39b502bf9 in  () at /usr/lib/libQt5WebKit.so.5
#5  0x00007fe3df325d4f in execute_native_thread_routine (__p=0x55ca88535ac0) at /build/gcc/src/gcc/libstdc++-v3/src/c++11/thread.cc:80
#6  0x00007fe3d8709075 in start_thread () at /usr/lib/libpthread.so.0
#7  0x00007fe3defa753f in clone () at /usr/lib/libc.so.6

Thread 4 (Thread 0x7fe3a3fff700 (LWP 3074)):
#0  0x00007fe3d5b2c8cf in g_main_context_prepare () at /usr/lib/libglib-2.0.so.0
#1  0x00007fe3d5b2d44e in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007fe3d5b2d63e in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007fe3df8b9054 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007fe3df86494c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007fe3df6ada99 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007fe3dd0c4181 in  () at /usr/lib/libKDevPlatformLanguage.so.52
#7  0x00007fe3df6b7b45 in  () at /usr/lib/libQt5Core.so.5
#8  0x00007fe3d8709075 in start_thread () at /usr/lib/libpthread.so.0
#9  0x00007fe3defa753f in clone () at /usr/lib/libc.so.6

Thread 3 (Thread 0x7fe3b18e7700 (LWP 3073)):
#0  0x00007fe3def9cea9 in poll () at /usr/lib/libc.so.6
#1  0x00007fe3d5b2d523 in  () at /usr/lib/libglib-2.0.so.0
#2  0x00007fe3d5b2d63e in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#3  0x00007fe3df8b9054 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#4  0x00007fe3df86494c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#5  0x00007fe3df6ada99 in QThread::exec() () at /usr/lib/libQt5Core.so.5
#6  0x00007fe3e1615976 in  () at /usr/lib/libQt5DBus.so.5
#7  0x00007fe3df6b7b45 in  () at /usr/lib/libQt5Core.so.5
#8  0x00007fe3d8709075 in start_thread () at /usr/lib/libpthread.so.0
#9  0x00007fe3defa753f in clone () at /usr/lib/libc.so.6

Thread 2 (Thread 0x7fe3b3b93700 (LWP 3072)):
#0  0x00007fe3def9cea9 in poll () at /usr/lib/libc.so.6
#1  0x00007fe3cb616180 in  () at /usr/lib/libxcb.so.1
#2  0x00007fe3cb617e4b in xcb_wait_for_event () at /usr/lib/libxcb.so.1
#3  0x00007fe3b5ca822a in  () at /usr/lib/libQt5XcbQpa.so.5
#4  0x00007fe3df6b7b45 in  () at /usr/lib/libQt5Core.so.5
#5  0x00007fe3d8709075 in start_thread () at /usr/lib/libpthread.so.0
#6  0x00007fe3defa753f in clone () at /usr/lib/libc.so.6

Thread 1 (Thread 0x7fe3e2939e00 (LWP 3070)):
[KCrash Handler]
#6  0x00007fe3dd188941 in KDevelop::IdentifiedType::declaration(KDevelop::TopDUContext const*) const () at /usr/lib/libKDevPlatformLanguage.so.52
#7  0x00007fe3dd1abb0f in KDevelop::AbstractDeclarationNavigationContext::htmlIdentifiedType(KDevelop::TypePtr<KDevelop::AbstractType>, KDevelop::IdentifiedType const*) () at /usr/lib/libKDevPlatformLanguage.so.52
#8  0x00007fe3844a02ff in  () at /usr/lib/qt/plugins/kdevplatform/30/kdevqmljslanguagesupport.so
#9  0x00007fe3dd1ac689 in KDevelop::AbstractDeclarationNavigationContext::eventuallyMakeTypeLinks(KDevelop::TypePtr<KDevelop::AbstractType>) () at /usr/lib/libKDevPlatformLanguage.so.52
#10 0x00007fe3844a0563 in  () at /usr/lib/qt/plugins/kdevplatform/30/kdevqmljslanguagesupport.so
#11 0x00007fe3dd1b1fe7 in KDevelop::AbstractDeclarationNavigationContext::html(bool) () at /usr/lib/libKDevPlatformLanguage.so.52
#12 0x00007fe3dd19d8fc in KDevelop::AbstractNavigationWidget::update() () at /usr/lib/libKDevPlatformLanguage.so.52
#13 0x00007fe3dd19e6ba in KDevelop::AbstractNavigationWidget::setContext(QExplicitlySharedDataPointer<KDevelop::AbstractNavigationContext>, int) () at /usr/lib/libKDevPlatformLanguage.so.52
#14 0x00007fe38449cb03 in  () at /usr/lib/qt/plugins/kdevplatform/30/kdevqmljslanguagesupport.so
#15 0x00007fe384490c1e in  () at /usr/lib/qt/plugins/kdevplatform/30/kdevqmljslanguagesupport.so
#16 0x00007fe38c3a100a in  () at /usr/lib/qt/plugins/kdevplatform/30/kdevcontextbrowser.so
#17 0x00007fe38c3a1d9e in  () at /usr/lib/qt/plugins/kdevplatform/30/kdevcontextbrowser.so
#18 0x00007fe38c3a2594 in  () at /usr/lib/qt/plugins/kdevplatform/30/kdevcontextbrowser.so
#19 0x00007fe3dbe617a1 in  () at /usr/lib/libKF5TextEditor.so.5
#20 0x00007fe3dbf46b1e in  () at /usr/lib/libKF5TextEditor.so.5
#21 0x00007fe3df88fafc in QMetaObject::activate(QObject*, int, int, void**) () at /usr/lib/libQt5Core.so.5
#22 0x00007fe3df89bc28 in QTimer::timeout(QTimer::QPrivateSignal) () at /usr/lib/libQt5Core.so.5
#23 0x00007fe3df89038b in QObject::event(QEvent*) () at /usr/lib/libQt5Core.so.5
#24 0x00007fe3e05d9a74 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#25 0x00007fe3e05e1341 in QApplication::notify(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
#26 0x00007fe3df865cb9 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /usr/lib/libQt5Core.so.5
#27 0x00007fe3df8b840a in QTimerInfoList::activateTimers() () at /usr/lib/libQt5Core.so.5
#28 0x00007fe3df8b8c92 in  () at /usr/lib/libQt5Core.so.5
#29 0x00007fe3d5b2d368 in g_main_context_dispatch () at /usr/lib/libglib-2.0.so.0
#30 0x00007fe3d5b2d5b1 in  () at /usr/lib/libglib-2.0.so.0
#31 0x00007fe3d5b2d63e in g_main_context_iteration () at /usr/lib/libglib-2.0.so.0
#32 0x00007fe3df8b9039 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#33 0x00007fe3b5d3d722 in  () at /usr/lib/libQt5XcbQpa.so.5
#34 0x00007fe3df86494c in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /usr/lib/libQt5Core.so.5
#35 0x00007fe3df86cc46 in QCoreApplication::exec() () at /usr/lib/libQt5Core.so.5
#36 0x000055ca8534e813 in  ()
#37 0x00007fe3deed206b in __libc_start_main () at /usr/lib/libc.so.6
#38 0x000055ca8534f04a in _start ()

Reported using DrKonqi
Comment 1 Robert Voinea 2018-07-19 06:56:09 UTC
It seems that it does not crash all the time.
See the example below.

The crash occurs when I move the mouse pointer over the "elbow" text.

I have identified two distinct cases when this does not occur:
 - If I comment or remove the "when" line
 - If I import the plugin with "import MyPlugin 1.0" (instead of "import MyPlugin 1.0 as MyPlugin")

Note: 
- Elbow is the data type defined in the plugin.
- Elbow.StyleLeft is an enum

import QtQuick 2.6
import MyPlugin 1.0 as MyPlugin

Item
{
	id: container
	MyPlugin.Elbow
	{
		id: elbow
		states: [
			State
			{
				name: 'LeftTop'
				when: (elbow.style == MyPlugin.Elbow.StyleLeft)
			}
		]
	}
}
Comment 2 Kevin Funk 2018-10-24 21:06:24 UTC
Can confirm.
Comment 3 Kevin Funk 2018-10-24 21:44:03 UTC
Git commit 6501b35cb64b3737a754d5201314e0b2d71366ff by Kevin Funk.
Committed on 24/10/2018 at 21:42.
Pushed by kfunk into branch '5.3'.

duchain: Make htmlIdentifiedType() crash-safe

Unfortunately not easy to add a regression test given the current qmljs
testing infrastructure.
FIXED-IN: 5.3.0

M  +17   -7    kdevplatform/language/duchain/navigation/abstractdeclarationnavigationcontext.cpp

https://commits.kde.org/kdevelop/6501b35cb64b3737a754d5201314e0b2d71366ff