duchain: Make htmlIdentifiedType() crash-safe

Unfortunately not easy to add a regression test given the current qmljs
testing infrastructure.

BUG: 396634
FIXED-IN: 5.3.0